2009-05-14  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Ariya Hidayat.

        Add a comment to QWebView::iconChanged(), mentioning that you will
        need to set the icon database path for icons to be loaded, and thus
        receive the signal.

        * Api/qwebview.cpp:

2009-05-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Ariya Hidayat.

        Fix setHtml test case by adding <head> tag to the expected result. This tag is automatically added by WebKit.

        * tests/qwebframe/tst_qwebframe.cpp:

2009-05-14  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Ariya Hidayat.

        Add a test case for the signal urlChanged().
        * tests/qwebframe/tst_qwebframe.cpp:

2009-05-13  Yael Aharon <yael.aharon@nokia.com>

        Reviewed by Ariya Hidayat.

        Move emitting the signal QWebFrame::urlChanged to FrameLoaderClientQt::dispatchDidCommitLoad().
        This is to ensure that urlChanged() is emitted even if the frame has no title.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::dispatchDidReceiveTitle):
        (WebCore::FrameLoaderClientQt::dispatchDidCommitLoad):

2009-05-13  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Rubberstamped by Ariya Hidayat.

        Fix coding style: Add {} to contents of if, containing a for loop.

        * Api/qwebelement.cpp:
        (QWebElement::styleProperty):

2009-05-12  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Ariya Hidayat.

        Fixed a possible crash @styleProperty when there is no embedded/external CSS set.

        * Api/qwebelement.cpp:
        (QWebElement::styleProperty):
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::style):

2009-05-12  Antonio Gomes   <antonio.gomes@openbossa.org>

        Reviewed by Ariya Hidayat.

        Added external CSS test cases to QWebElement::styleProperty() method.
