@@ -131,11 +131,6 @@ protected slots:
 #endif
     }
 
-    void newWindow() {
-        MainWindow *mw = new MainWindow;
-        mw->show();
-    }
-
     void zoomIn() {
         int i = zoomLevels.indexOf(currentZoom);
         Q_ASSERT(i >= 0);
@@ -193,6 +188,13 @@ protected slots:
                 e.setStyleProperty("background-color", "yellow");
             statusBar()->showMessage(QString("%1 element(s) selected").arg(result.count()), 5000);
         }
+    }
+
+public slots:
+
+    void newWindow(const QString &url = QString()) {
+        MainWindow *mw = new MainWindow(url);
+        mw->show();
     }
 
 private:
@@ -449,8 +451,13 @@ int main(int argc, char **argv)
     } else {
         if (args.count() > 1)
             url = args.at(1);
-            
+
         MainWindow window(url);
+
+        // Opens every given urls in new windows
+        for (int i = 2; i < args.count(); i++)
+            window.newWindow(args.at(i));
+
         window.show();
         return app.exec();
     }
